# DenseSubgraph

./: CMakeLists.txt  Goldbergs.h  MaxFlowBoostWrapper.h  README.md  main.cpp
